[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Kent Bull <kent@kentbull.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
env_logger = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
reqwest = "0.11"